Improve Dashboard layout and styling consistency
- Updated dashboard.css for enhanced responsiveness and visual consistency
- Modified control.html, incidents.html, and index.html to align with new styles
- Cleaned up HTML structure for better maintainability

--- a/Dashboard/index.html
+++ b/Dashboard/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" maximum-scale=1.0, use>
     <title>UrbanEye | Dashboard</title>
     <link rel="stylesheet" href="Styles/dashboard.css">
 </head>
@@ -19,7 +19,7 @@
             <a href="incidents.html">Incidents</a>
         </nav>
 
-        <section id="map container">
+        <section id="map-container" class="container">
             <div id="map"></div>            <!--Leaflet.js would come here-->
         </section>
 
