--- a/Dashboard/incidents.html
+++ b/Dashboard/incidents.html
@@ -15,7 +15,7 @@
 
             <nav>
                 <a href="index.html">Live View</a>
-                <a href="control.html">Drone Control</a>
+                <a href="control.html">Drone Controls</a>
                 <a href="incidents.html" class="active">Incidents</a>
             </nav>
 
@@ -25,6 +25,7 @@
                         <th>Time</th>
                         <th>Location</th>
                         <th>Type</th>
+                        <th>Status</th>
                     </tr>
                 </thead>
                 <tbody>
