--- a/Dashboard/index.html
+++ b/Dashboard/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
 </head>
 <body>
-    <div class="">   
+    <div class="container">   
         <header>
             <h1>🏙️UrbanEye</h1>
             <p>Autonomous Crime Surveillance System</p>
@@ -70,7 +70,7 @@
                         <span class="alert-time">2 MIN AGO</span>
                     </div>
                     <div class="alert-item warning">
-                        <span class="alert-type">SUSPICIOUS</span>
+                        <span class="alert-type">SUSPICIOUS </span>
                         <span class="alert-location">University Road</span>
                         <span class="alert-time">5 MIN AGO</span>
                     </div>
